--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:watch": "vitest",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "cors": "^2.8.5",
