--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint": "biome lint",
 		"check": "biome check",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "drizzle-kit migrate"
+		"db:migrate": "drizzle-kit migrate",
+		"db:seed": "tsx src/db/seed.ts"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
